# tellico-ppa

./: .gitignore  .project  CMakeLists.txt
po/: CMakeLists.txt  CMakeLists.txt~  messages.mo
po/ast/: tellico.po
po/bg/: tellico.po
po/bs/: tellico.po
po/ca/: tellico.po
po/ca/docs/tellico/: advanced.docbook  configuration.docbook  details.docbook  faqs.docbook  fundamentals.docbook  hacking.docbook  importing-exporting.docbook  index.docbook  menus.docbook
po/ca@valencia/: tellico.po
po/cs/: tellico.po
po/da/: tellico.po
po/de/: tellico.po
po/de/docs/tellico/: advanced.docbook  configuration.docbook  details.docbook  fundamentals.docbook  hacking.docbook  importing-exporting.docbook  index.docbook  menus.docbook
po/el/: tellico.po
po/en_GB/: tellico.po
po/eo/: tellico.po
po/es/: tellico.po
po/es/docs/tellico/: advanced.docbook  configuration.docbook  details.docbook  fundamentals.docbook  hacking.docbook  importing-exporting.docbook  index.docbook  menus.docbook
po/et/: tellico.po
po/eu/: tellico.po
po/fi/: tellico.po
po/fr/: tellico.po
po/fr/docs/tellico/: hacking.docbook
po/ga/: tellico.po
po/gl/: tellico.po
po/hu/: tellico.po
po/ia/: CMakeLists.txt  tellico.po
po/it/: tellico.po
po/it/docs/tellico/: advanced.docbook  configuration.docbook  faqs.docbook  fundamentals.docbook  (+3 more)
po/ja/: tellico.po
po/kk/: tellico.po
po/ko/: tellico.po
po/lt/: tellico.po
po/mr/: tellico.po
po/ms/: tellico.po
po/nb/: tellico.po
po/nds/: tellico.po
po/nl/: tellico.po
po/nn/: tellico.po
po/pl/: tellico.po
po/pt/: tellico.po
po/pt_BR/: tellico.po
po/ro/: tellico.po
po/ru/: tellico.po
po/sk/: tellico.po
po/sl/: tellico.po
po/sv/: tellico.po
po/tr/: tellico.po
po/ug/: tellico.po
po/uk/: tellico.po
po/zh_CN/: tellico.po
po/zh_TW/: tellico.po
(+246 files in other folders)
